--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             </div>
           </article>
           <article class = "card">
-            <img src="./images/Ufa.jpeg" alt="Уфа" class="card__image">
+            <img src="./images/Ufa.svg" alt="Уфа" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Уфа</h2>
                 <button type="button" class="card__button"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/ny_night_01.jpeg" alt="лондон" class="card__image">
+            <img src="./images/ny_night_01.svg" alt="лондон" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Нью-Йоорк</h2>
                 <button type="button" class="card__button"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/venecia.jpeg" alt="фото" class="card__image">
+            <img src="./images/venecia.svg" alt="фото" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Венеция</h2>
                 <button type="button" class="card__button"></button>
