--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </section>
         <section class="elements">
           <article class = "card">
-            <img src="./images/kirill-pershin-1088404-unsplash.svg" alt="Карачаевск" class="card__image">
+            <img src="./images/sidney.svg" alt="Сидней" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Карачаевск</h2>
+                <h2 class="card__title">Сидней</h2>
                 <button type="button" class="card__button"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/kirill-pershin-1404681-unsplash1.svg" alt="Эльбрус" class="card__image">
+            <img src="./images/baikal.svg" alt="Байкал" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Гора Эльбрус</h2>
+                <h2 class="card__title">Байкал</h2>
                 <button type="button" class="card__button"></button>
             </div>
           </article>
