--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </section>
         <section class="elements">
           <article class = "card">
-            <img src="./images/kirill-pershin-1088404-unsplash.svg" alt="фото" class="card__image">
+            <img src="./images/Ufa.jpeg" alt="Ufa" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Карачаевск</h2>
+                <h2 class="card__title">Ufa</h2>
                 <button class="card__like"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/kirill-pershin-1404681-unsplash1.svg" alt="Эльбрус" class="card__image">
+            <img src="./images/ny_night_01.jpeg" alt="NY" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Гора Эльбрус</h2>
+                <h2 class="card__title">New York</h2>
                 <button class="card__like"></button>
             </div>
           </article>
