--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </section>
         <section class="elements">
           <article class = "card">
-            <img src="./images/Ufa.jpeg" alt="Ufa" class="card__image">
+            <img src="./images/Ufa.jpeg" alt="Уфа" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Ufa</h2>
                 <button class="card__like"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/ny_night_01.jpeg" alt="NY" class="card__image">
+            <img src="./images/ny_night_01.jpeg" alt="Нью-Йоорк" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">New York</h2>
                 <button class="card__like"></button>
