--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
         </section>
         <section class="elements">
           <article class = "card">
-            <img src="./images/Ufa.jpeg" alt="Уфа" class="card__image">
+            <img src="./images/Ufa.jpeg" alt="фото" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Ufa</h2>
+                <h2 class="card__title">Уфа</h2>
                 <button class="card__like"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/ny_night_01.jpeg" alt="Нью-Йоорк" class="card__image">
+            <img src="./images/ny_night_01.jpeg" alt="Нью-Йорк" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">New York</h2>
+                <h2 class="card__title">Нью-Йорк</h2>
                 <button class="card__like"></button>
             </div>
           </article>
           <article class = "card">
-            <img src="./images/kirill-pershin-1556355-unsplash2.svg" alt="фото" class="card__image">
+            <img src="./images/venecia.jpeg" alt="Венеция" class="card__image">
             <div class="card__info">
-                <h2 class="card__title">Домбай</h2>
+                <h2 class="card__title">Венеция</h2>
                 <button class="card__like"></button>
             </div>
           </article>
