--- a/index.html
+++ b/index.html
@@ -14,71 +14,71 @@
       <main class="main">
         <section class="profile">
           <div class="profile__info">
-          <img src="./images/image.svg" alt="Фото" class="profile__avatar">
-          <h1  class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__description">Исследователь океана</p>
-          <button class="profile__edit-button"></button>
+            <img src="./images/image.svg" alt="Фото" class="profile__avatar">
+            <h1  class="profile__name">Жак-Ив Кусто</h1>
+            <p class="profile__description">Исследователь океана</p>
+            <button class="profile__edit-button" type="button"></button>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
           <article class = "card">
             <img src="./images/Ufa.jpeg" alt="фото" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Уфа</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
           <article class = "card">
             <img src="./images/ny_night_01.jpeg" alt="Нью-Йорк" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Нью-Йорк</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
           <article class = "card">
             <img src="./images/venecia.jpeg" alt="Венеция" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Венеция</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
           <article class = "card">
             <img src="./images/Ufa.jpeg" alt="Уфа" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Уфа</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
           <article class = "card">
             <img src="./images/ny_night_01.jpeg" alt="лондон" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Нью-Йоорк</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
           <article class = "card">
             <img src="./images/venecia.jpeg" alt="фото" class="card__image">
             <div class="card__info">
                 <h2 class="card__title">Венеция</h2>
-                <button class="card__like"></button>
+                <button type="button" class="card__like"></button>
             </div>
           </article>
         </section>
       </main>
-        <section class="footer">
+        <footer class="footer">
           <p class="footer__content">&copy; 2023 Mesto Russia</p>
-        </section>
+        </footer>
     </div>
     <div class="popup">
-      <div class="popup__form">
-        <button class="popup__exit"></button>
-        <h1 class="popup__title">Редактировать профиль</h1>
+      <div class="popup__container-form">
+        <button type="button" class="popup__exit"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__field">
         <input class="popup__subtitle">
-        <button class="popup__submit">Сохранить</button>
+        <button type="button" class="popup__submit">Сохранить</button>
       </div>
     </div> 
-   <script src="./pages/index.js" defer></script>
+   <script src="./scripts/index.js" defer></script>
   </body>
 </html>
