--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
           </article>
         </section>
       </main>
-        <footer class="footer">
-          <p class="footer__content">&copy; 2023 Mesto Russia</p>
-        </footer>
+      <footer class="footer">
+        <p class="footer__content">&copy; 2023 Mesto Russia</p>
+      </footer>
     </div>
     <div class="popup">
-      <div class="popup__container-form">
+      <div class="popup__container">
         <button type="button" class="popup__exit"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__field">
-        <input class="popup__subtitle">
+        <form>
+        <input name="имя" class="popup__field">
+        <input name="имя" class="popup__subtitle">
         <button type="button" class="popup__submit">Сохранить</button>
+        </form>
       </div>
     </div> 
    <script src="./scripts/index.js" defer></script>
