--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <div class="popup__container">
         <button type="button" class="popup__exit"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form>
-        <input name="имя" class="popup__field">
-        <input name="имя" class="popup__subtitle">
-        <button type="button" class="popup__submit">Сохранить</button>
+        <form name="form">
+          <input type="text" name="popup-title" class="popup__field">
+          <input type="text" name="popup-subtitle" class="popup__subtitle">
+          <button type="button" class="popup__submit">Сохранить</button>
         </form>
       </div>
     </div> 
