--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <form name="form">
           <input type="text" name="popup-title" class="popup__field">
           <input type="text" name="popup-subtitle" class="popup__subtitle">
-          <button type="button" class="popup__submit">Сохранить</button>
+          <button type="submit" class="popup__submit">Сохранить</button>
         </form>
       </div>
     </div> 
