--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="popup__container">
         <button type="button" class="popup__exit"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="form">
+        <form name="form" class="form">
           <input type="text" name="popup-title" class="popup__field">
           <input type="text" name="popup-subtitle" class="popup__subtitle">
           <button type="submit" class="popup__submit">Сохранить</button>
