--- a/index.html
+++ b/index.html
@@ -21,49 +21,17 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-        <section class="elements">
-          <article class = "card">
-            <img src="./images/Ufa.jpeg" alt="фото" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Уфа</h2>
-                <button type="button" class="card__like"></button>
+         <section class="elements">
+          <template class="card__template">
+          <div class="card">
+            <img src=""  alt="" class="card__image">
+            <div class ="card__info">
+              <h2 class="card__title"></h2>
+              <button type=button class="card__like"></button>
             </div>
-          </article>
-          <article class = "card">
-            <img src="./images/ny_night_01.jpeg" alt="Нью-Йорк" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Нью-Йорк</h2>
-                <button type="button" class="card__like"></button>
-            </div>
-          </article>
-          <article class = "card">
-            <img src="./images/venecia.jpeg" alt="Венеция" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Венеция</h2>
-                <button type="button" class="card__like"></button>
-            </div>
-          </article>
-          <article class = "card">
-            <img src="./images/Ufa.jpeg" alt="Уфа" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Уфа</h2>
-                <button type="button" class="card__like"></button>
-            </div>
-          </article>
-          <article class = "card">
-            <img src="./images/ny_night_01.jpeg" alt="лондон" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Нью-Йоорк</h2>
-                <button type="button" class="card__like"></button>
-            </div>
-          </article>
-          <article class = "card">
-            <img src="./images/venecia.jpeg" alt="фото" class="card__image">
-            <div class="card__info">
-                <h2 class="card__title">Венеция</h2>
-                <button type="button" class="card__like"></button>
-            </div>
-          </article>
+            <button type=button class="card__trash"></button>
+          </div>
+          </template>
         </section>
       </main>
       <footer class="footer">
@@ -81,6 +49,24 @@
         </form>
       </div>
     </div> 
+    <div class="popup popup__add">
+      <div class="popup__container">
+        <button type="button" class="popup__exit popup__exit_add"></button>
+        <h2 class="popup__title">Новое Место</h2>
+        <form name="form__add" class="form__add">
+          <input type="text" name="popup__field_add" class="popup__field popup__field_add" placeholder="Название">
+          <input type="text" name="popup__subtitle_add" class="popup__subtitle popup__subtitle_add" placeholder='Ссылка'>
+          <button type="submit" class="popup__submit">Сохранить</button>
+        </form>
+      </div>
+    </div> 
+      <div class="popup popup__zoom">
+        <button type="button" class="popup__exit_zoom"></button>
+        <div class="popup__zoom_container">
+            <img class="popup__zoom_photo" src=" " alt=" "/>
+            <h2 class="popup__zoom_title"></h2>
+        </div>
+    </div>
    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
