--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <section class="elements">
           <template class="card__template">
           <div class="card">
-            <img src=""  alt="" class="card__image">
+            <img src="#"  alt="#" class="card__image">
             <div class ="card__info">
               <h2 class="card__title"></h2>
               <button type=button class="card__like"></button>
