--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         </form>
       </div>
     </div> 
-    <div class="popup popup__add">
+    <div class="popup popup_add">
       <div class="popup__container">
         <button type="button" class="popup__exit popup__exit_add"></button>
         <h2 class="popup__title">Новое Место</h2>
-        <form name="form__add" class="form__add">
-          <input type="text" name="popup__field_add" class="popup__field popup__field_add" placeholder="Название">
-          <input type="text" name="popup__subtitle_add" class="popup__subtitle popup__subtitle_add" placeholder='Ссылка'>
+        <form name="form__add" class="form_add">
+          <input type="text" name="popup__field_add" class="popup__field popup__field-add" placeholder="Название">
+          <input type="text" name="popup__subtitle_add" class="popup__subtitle popup__subtitle-add" placeholder='Ссылка'>
           <button type="submit" class="popup__submit">Сохранить</button>
         </form>
       </div>
     </div> 
-      <div class="popup popup__zoom">
-        <button type="button" class="popup__exit_zoom"></button>
-        <div class="popup__zoom_container">
-            <img class="popup__zoom_photo" src=" " alt=" "/>
-            <h2 class="popup__zoom_title"></h2>
+      <div class="popup popup_zoom">
+        <button type="button" class="popup__exit-zoom"></button>
+        <div class="popup_zoom-container">
+            <img class="popup_zoom-photo" src=" " alt=" "/>
+            <h2 class="popup_zoom-title"></h2>
         </div>
     </div>
    <script src="./scripts/index.js" defer></script>
