--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="popup__container">
         <button type="button" class="popup__exit popup__exit_add"></button>
         <h2 class="popup__title">Новое Место</h2>
-        <form name="form__add" class="form_add">
+        <form name="form__add" class="popup__form_add">
           <input type="text" name="popup__field_add" class="popup__field popup__field-add" placeholder="Название">
           <input type="text" name="popup__subtitle_add" class="popup__subtitle popup__subtitle-add" placeholder='Ссылка'>
           <button type="submit" class="popup__submit">Сохранить</button>
@@ -62,9 +62,9 @@
     </div> 
       <div class="popup popup_zoom">
         <button type="button" class="popup__exit-zoom"></button>
-        <div class="popup_zoom-container">
-            <img class="popup_zoom-photo" src=" " alt=" "/>
-            <h2 class="popup_zoom-title"></h2>
+        <div class="popup__container-zoom">
+            <img class="popup__photo-zoom" src=" " alt=" "/>
+            <h2 class="popup__title-zoom"></h2>
         </div>
     </div>
    <script src="./scripts/index.js" defer></script>
