--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <main class="main">
         <section class="profile">
           <div class="profile__info">
-            <img src="./images/image.svg" alt="Фото" class="profile__avatar">
+            <img src="./images/image.svg" alt="Фото профиля" class="profile__avatar">
             <h1  class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__description">Исследователь океана</p>
             <button class="profile__edit-button" type="button"></button>
@@ -38,7 +38,7 @@
         <p class="footer__content">&copy; 2023 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup">
+    <div class="popup popup_edit">
       <div class="popup__container">
         <button type="button" class="popup__exit"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -53,7 +53,7 @@
       <div class="popup__container">
         <button type="button" class="popup__exit popup__exit_add"></button>
         <h2 class="popup__title">Новое Место</h2>
-        <form name="form__add" class="popup__form-add">
+        <form name="form__add" class="form popup__form-add">
           <input type="text" name="popup__field_add" class="popup__field popup__field-add" placeholder="Название">
           <input type="text" name="popup__subtitle_add" class="popup__subtitle popup__subtitle-add" placeholder='Ссылка'>
           <button type="submit" class="popup__submit">Сохранить</button>
@@ -61,10 +61,10 @@
       </div>
     </div> 
       <div class="popup popup_zoom">
-        <button type="button" class="popup__exit-zoom"></button>
         <div class="popup__container-zoom">
-            <img class="popup__photo-zoom" src=" " alt=" "/>
-            <h2 class="popup__title-zoom"></h2>
+          <img class="popup__photo-zoom" src=" " alt=" "/>
+          <button type="button" class="popup__exit popup__exit-zoom"></button>
+          <h2 class="popup__title-zoom"></h2>
         </div>
     </div>
    <script src="./scripts/index.js" defer></script>
