--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <img src="./images/image.svg" alt="Фото профиля" class="profile__avatar">
             <h1  class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__description">Исследователь океана</p>
-            <button class="profile__edit-button popup__open-button" type="button"></button>
+            <button class="profile__edit-button" type="button"></button>
           </div>
-          <button class="profile__add-button popup__open-button" type="button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
          <section class="elements">
           <template class="card__template">
