--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button class="profile__add-button" type="button"></button>
         </section>
          <section class="elements">
-          <template class="card__template">
+          <template class="card__template" id="card-template">
           <div class="card">
             <img src="#"  alt="#" class="card__image">
             <div class ="card__info">
@@ -48,7 +48,7 @@
           <div class="popup__span-container">
           <span id="name__input-error" class="popup__input-error"></span>
           </div>
-          <input id="name__input_descriptionr" type="text" name="popup-subtitle" class="popup__input  popup__subtitle" placeholder="Профессия" minlength="2" maxlength="200" required>
+          <input id="name__input_description" type="text" name="popup-subtitle" class="popup__input  popup__subtitle" placeholder="Профессия" minlength="2" maxlength="200" required>
           <div class="popup__span-container">
           <span id="name__input_description-error" class="popup__input-error"></span>
           </div>
@@ -81,7 +81,9 @@
           <h2 class="popup__title-zoom"></h2>
         </div>
     </div>
-   <script src="./scripts/index.js" defer></script>
-   <script src="./scripts/validate.js" defer></script>
+   <script type="module" src="./scripts/index.js" defer></script>
+   <script type="module" src="./scripts/FormValidator.js" defer></script>
+   <script type="module" src="./scripts/card.js" defer></script>
+   <script type="module" src="./scripts/initialElements.js" defer></script>
   </body>
 </html>
