--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
           <h2 class="popup__title-zoom"></h2>
         </div>
     </div>
-   <script type="module" src="./scripts/index.js" defer></script>
-   <script type="module" src="./scripts/FormValidator.js" defer></script>
-   <script type="module" src="./scripts/card.js" defer></script>
-   <script type="module" src="./scripts/initialElements.js" defer></script>
+   <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
