--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <div class="profile__info">
             <div class="profile__avatar_change"> 
             <img src="<%=require('./images/image.svg')%>" alt="Фото профиля" class="profile__avatar">
-            <button class="profile__avatar_change-button"></button>
+            <button class="profile__avatar-button"></button>
             </div> 
             <h1  class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__description">Исследователь океана</p>
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="popup popup__avatar">
+    <div class="popup popup_avatar">
       <div class="popup__container">
         <button type="button" class="popup__exit popup__exit-avatar"></button>
         <form class="form popup__form-avatar" name="avatar-form" novalidate>
