--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <main class="main">
         <section class="profile">
           <div class="profile__info">
-            <div class="profile__avatar_change"> 
-            <img src="<%=require('./images/image.svg')%>" alt="Фото профиля" class="profile__avatar">
+            <div class="profile__avatar"> 
+            <img src="<%=require('./images/image.svg')%>" alt="Фото профиля" class="profile__avatar-icon">
             <button class="profile__avatar-button"></button>
             </div> 
             <h1  class="profile__name">Жак-Ив Кусто</h1>
