--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <div class="popup__container">
         <button type="button" class="popup__exit"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="form" class="form" novalidate>
+        <form name="form" class="form popup__form-edit" novalidate>
           
           <input type="text" id="name__input" name="name" class="popup__input  popup__field" placeholder="Имя" minlength="2" maxlength="40" required>
           <div class="popup__span-container">
